<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hackathon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Rock">Rock</string>
    <string name="Paper">Paper</string>
    <string name="Scissors">"Scissors "</string>
    <string name="Lizard">Lizard</string>
    <string name="Spock">Spock</string>

</resources>