<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="reset"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/button3"
        android:onClick="onSpockClick"
        android:text="@string/Spock" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/button4"
        android:onClick="onPaperClick"
        android:text="@string/Paper" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/button1"
        android:onClick="onScissorsClick"
        android:text="@string/Scissors" />

    <ImageView
        android:id="@+id/Input"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="29dp"
        android:layout_weight="1"
        android:src="@drawable/mark" />

    <ImageView
        android:id="@+id/Output"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/Input"
        android:layout_toRightOf="@+id/button1"
        android:layout_weight="1"
        android:src="@drawable/mark" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button1"
        android:text="Player" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/button2"
        android:text="Computer" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentLeft="true"
        android:onClick="onRockClick"
        android:text="@string/Rock" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Input"
        android:layout_marginBottom="88dp"
        android:onClick="onLizardClick"
        android:text="@string/Lizard" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:text="0"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toLeftOf="@+id/button1"
        android:text="0"
        android:textSize="60dp" />

</RelativeLayout>